[gd_scene load_steps=5 format=3 uid="uid://b0vibo33qrh4w"]

[ext_resource type="Script" path="res://gui/find_panel/find_expression_edit.gd" id="1_3apnd"]
[ext_resource type="Script" path="res://core/expr_node.gd" id="2_loo4q"]

[sub_resource type="Resource" id="Resource_fe45m"]
script = ExtResource("2_loo4q")
type = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjmoy"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.517647)

[node name="FindExpressionEdit" type="Container"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
script = ExtResource("1_3apnd")
expression = SubResource("Resource_fe45m")

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 1
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_sjmoy")
theme_override_styles/focus = SubResource("StyleBoxFlat_sjmoy")
theme_override_styles/read_only = SubResource("StyleBoxFlat_sjmoy")
flat = true
caret_blink = true

[node name="Tree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
allow_search = false
hide_folding = true
hide_root = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[connection signal="focus_exited" from="." to="." method="queue_redraw"]
[connection signal="focus_exited" from="LineEdit" to="." method="queue_redraw"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed" unbinds=1]
